<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="8dp" android:backgroundTint="@android:color/white">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Via Trieste, 63 - 35121 Padova"
            android:id="@+id/textViewLocalMapAddres"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Torre Archimede"
            android:id="@+id/textViewLocalMapName"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_below="@+id/textViewLocalMapAddres"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:text="15 MB"
            android:id="@+id/textViewLocalMapSize"
            android:layout_below="@+id/textViewLocalMapDescription" android:layout_marginTop="6dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="v1.0"
            android:id="@+id/textViewLocalMapVersion"
            android:layout_alignParentEnd="true"/>

    <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/updateLocalMap"
            android:layout_alignParentEnd="true"
            android:src="@drawable/button_map_update"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/textViewLocalMapDescription" android:clickable="true"
            android:focusable="true" android:contextClickable="true"
            android:cropToPadding="false" android:backgroundTint="#ffffff"
            android:layout_marginTop="6dp"/>

    <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/removeLocalMap"
            android:src="@drawable/button_remove_map"
            android:layout_toLeftOf="@+id/updateLocalMap"
            android:layout_below="@+id/textViewLocalMapDescription"
            android:layout_marginRight="16dp" android:clickable="false"
            android:baselineAligned="true" android:backgroundTint="#ffffff"
            android:layout_marginTop="6dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:text="Mappa aggiornata"
            android:id="@+id/textViewMapStatus"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/textViewLocalMapSize"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Descrizione"
            android:layout_marginBottom="6dp"
            android:id="@+id/textViewLocalMapDescription"
            android:layout_centerVertical="true" android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewLocalMapName"/>

</RelativeLayout>