...
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="menu_developer">Developer area</string>
    <string name="mapManager">Map Manager</string>

    <string name="title_activity_developer_unlocker">Developer login</string>
    <string name="prompt_code">Please insert developer code</string>
    <string name="action_login">Login</string>
    <string name="title_activity_main_developer">Your logs</string>
    <string name="action_beacon_power_area">Beacon Power Area</string>
...
    </string>
    <string name="dialog_title_connection_not_enabled">Enable Wi-Fi?</string>
    <string name="dialog_connection_not_enabled">Wi-Fi is needed to use the
        navigation functionality of this app.
    </string>
    <string name="dialog_title_no_beacon_seen">No beacon seen</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="title_activity_nearby_poi">Nearby</string>
    <string name="title_activity_log_information">Log Details</string>
    <string name="search_hint">Search inside the building</string>
    <string name="title_activity_navigation">Instructions</string>
    <string name="no_result_found">No result found</string>
...
