<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        tools:context="com.leaf.clips.presenter.LocalMapActivity">

    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:id="@+id/listViewLocalMaps"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>
